Correct overflow on mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Rammetto One', cursive;
+  -webkit-overflow-x: hidden;
   overflow-x: hidden;
 }
 
